# initiativ

./: .gitignore  CMakeLists.txt  README.md
data/: initiativ.sqlite
scripts/: python scribe_tool.py
src/: main.cpp  monster.h
